base/vikunja/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vikunja
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  selector:
    matchLabels:
      app: vikunja
  template:
    metadata:
      labels:
        app: vikunja
    spec:
      securityContext:
        fsGroup: 1000 
        runAsUser: 1000
        runAsGroup: 1000
      tolerations:
        - key: "opi"
          operator: "Exists"
          effect: "NoSchedule"
          
      containers:
      - name: vikunja
        image: docker.io/vikunja/vikunja:2.4.0
        ports:
        - containerPort: 3456
          name: http
        volumeMounts:
        - name: files
          mountPath: /app/vikunja/files
        - name: cache
          mountPath: /.cache
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
      volumes:
      - name: files
        persistentVolumeClaim:
          claimName: vikunja-files
      - name: cache
        emptyDir: {}
